# searchxyz

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  localinstall.sh  localupdate.sh  onpkg.json
.superpowers/sdd/: progress.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md
docs/: core.md  idea.md  implementation.md  prd.md  research.md  spec.md  todo.md
docs/superpowers/plans/: 2026-06-21-searchxyz-enhancements.md
docs/superpowers/specs/: 2026-06-21-searchxyz-enhancements-design.md
onpkg_docs/: INDEX.md  design.md  implementation.md  prd.md  todo.md
onpkg_docs/rust/: skill.md
src/: main.rs
src/cache/: mod.rs
src/config/: mod.rs
src/crawler/: fast_spider.rs  fingerprint.rs  github.rs  headless.rs  mod.rs  sitemap.rs  spider.rs  youtube.rs
src/error/: mod.rs
src/extractor/: mod.rs
src/graph/: mod.rs
src/index/: mod.rs
src/pipeline/: mod.rs
src/search/: bing.rs  brave.rs  duckduckgo.rs  google.rs  mod.rs  searxng.rs
src/tools/: mod.rs
