[package]
name = "searchxyz"
version = "0.0.4"
edition = "2021"
description = "MCP search server — search the web, crawl pages, and index content for AI agents"

[dependencies]
# ── MCP protocol ──
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io"] }

# ── Async runtime ──
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# ── HTTP (using rustls-tls to avoid native openssl compiler dependency) ──
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "cookies", "rustls-tls"] }

# ── HTML parsing & extraction ──
scraper = "0.22"
ego-tree = "0.10"

# ── Full-text search index ──
tantivy = "0.22"

# ── Caching ──
lru = "0.12"

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
schemars = "1.2"

# ── Error handling ──
thiserror = "2"
anyhow = "1"

# ── Logging / tracing ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── CLI ──
clap = { version = "4", features = ["derive"] }

# ── Rate limiting ──
governor = "0.8"

# ── Time ──
chrono = { version = "0.4", features = ["serde"] }

# ── URL handling ──
url = "2"
dirs = "5.0"
rand = "0.9"
chromiumoxide = { version = "0.9.1", optional = true }

[features]
default = []
js-rendering = ["dep:chromiumoxide"]

[workspace]
# Empty workspace table to build independently of parent workspace when run directly.